Jann 30/objects/CRS_Package_Type__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRS_Package_Type_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>CRS Package Type External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Package_Type_Name__c</fullName>
        <label>Package Type Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gvwCRS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To distinguish if this package type only shows up in glaceau vitaminwater package type list</inlineHelpText>
        <label>gvwCRS</label>
        <type>Checkbox</type>
    </fields>
    <label>Package Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Package_Type_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Package Type ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>